--- a/ticketing-client/src/UI/Events.css
+++ b/ticketing-client/src/UI/Events.css
@@ -1,3 +1,18 @@
-.mt-3 {
-    margin-top: 1rem;
-}
+  .event-card {
+    background-color: #fff;
+    padding: 1rem;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    transition: box-shadow 0.3s ease, transform 0.3s ease;
+  }
+  
+  .event-card:hover {
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    transform: translateY(-5px);
+  }
+  
+  .events-wrapper {
+    position: fixed;
+    top: 5rem;
+  }
+  
