added standup in the events, working fine

--- a/ticketing-client/src/UI/home.css
+++ b/ticketing-client/src/UI/home.css
@@ -4,16 +4,24 @@
     color: black;
     transition: all 0.3s ease;
   }
-  
-  /* .btn-preview:hover {
-    transform: translateY(-5px);
+
+  .btn-primary2:hover {
+    background-color: black;
+    border-color: wheat;
+    color: wheat;
     transition: all 0.3s ease;
-  } */
+  }
 
   .btn-primary {
     background-color: black;
     border-color: white;
     color: white;
+  }
+
+  .btn-primary2 {
+    background-color: white;
+    border-color: black;
+    color: black;
   }
   
   
