--- a/ticketing-client/src/UI/Events.css
+++ b/ticketing-client/src/UI/Events.css
@@ -1,5 +1,5 @@
   .event-card {
-    background-color: #fff;
+    background-color: #f6f6f6;
     padding: 1rem;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
@@ -7,7 +7,7 @@
   }
   
   .event-card:hover {
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 18px 36px rgba(30, 66, 210, 0.2);
     transform: translateY(-5px);
   }
   
@@ -16,3 +16,10 @@
     top: 5rem;
   }
   
+  .card-body-fixed-height {
+    height: 425px;
+  }
+
+  .imdb-text-color {
+    color: rgb(255, 119, 0);
+  }
