added name of logged in user to the home screen as well

--- a/ticketing-client/src/UI/CSS/home.css
+++ b/ticketing-client/src/UI/CSS/home.css
@@ -24,4 +24,11 @@
     color: black;
   }
   
+  .logged-in-user {
+    background-color: #F0F0F0;
+    font-style: italic;
+    font-size: 20px;
+    padding: 10px;
+    border-radius: 10px;
+  }
   
