Created Sign Up page that works properly. Also Styled it and added button in Login.tsx that goes to the signup page to create an account. Also modified the ResponseEntity response on the backend for proper synchronization

--- a/ticketing-client/src/UI/CSS/CustomJumbotron.css
+++ b/ticketing-client/src/UI/CSS/CustomJumbotron.css
@@ -1,6 +1,6 @@
 /* JumbotronComponent.css */
 .custom-jumbotron {
     background-color: rgba(252, 109, 61, 0.993); /* Change the color to your desired color */
-    color: white; /* Change the text color to your desired color */
+    color: black; /* Change the text color to your desired color */
   }
   
