--- a/ticketing-client/src/UI/CSS/CustomJumbotron.css
+++ b/ticketing-client/src/UI/CSS/CustomJumbotron.css
@@ -1,6 +1,6 @@
 /* JumbotronComponent.css */
 .custom-jumbotron {
-    background-color: rgba(252, 109, 61, 0.993); /* Change the color to your desired color */
+    background-color: #9A616D; /* Change the color to your desired color */
     color: black; /* Change the text color to your desired color */
   }
   
