--- a/ticketing-client/src/UI/CSS/Event.css
+++ b/ticketing-client/src/UI/CSS/Event.css
@@ -1,11 +1,11 @@
 .card {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-  }
-  
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 .hover-overlay:hover {
-    opacity: 0.8;
+  opacity: 0.8;
 
 }
 
@@ -17,7 +17,8 @@
 .custom-arrow {
   width: 20px;
   height: 20px;
-  border: solid transparent; /* set border-color to transparent */
+  border: solid transparent;
+  /* set border-color to transparent */
   border-width: 2px 2px 0 0;
 }
 
@@ -30,6 +31,19 @@
 }
 
 .carousel-container {
-  padding-top: 65px; /* adjust the value as needed */
+  padding-top: 65px;
+  /* adjust the value as needed */
 }
 
+.event-card {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  min-height: 400px;
+}
+
+.search-container {
+  max-width: 400px;
+  height: 49px;
+  margin: 0 auto;
+}
