--- a/ticketing-client/src/UI/CSS/EventDetails.css
+++ b/ticketing-client/src/UI/CSS/EventDetails.css
@@ -3,28 +3,28 @@
     padding: 0;
     list-style: none;
   }
-  
+
   .ticket-section li {
     display: inline-block;
     margin-right: 20px;
     margin-bottom: 20px;
   }
-  
+
   .ticket-section span {
     display: inline-block;
     margin-right: 10px;
   }
-  
+
   .ticket-section button {
     display: inline-block;
   }
-  
+
   .body {
-    background-image: url('https://images.unsplash.com/photo-1488109811119-98431feb6929?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1160&q=80');
+    background: rgb(219, 222, 221);
     background-repeat: no-repeat;
     background-size: cover;
   }
-  
+
   .container {
     display: flex;
     justify-content: center;
@@ -36,6 +36,6 @@
     color: black;
   }
 
-
-
-  
+  .content-container {
+    margin-top: 100px;
+  }
