--- a/ticketing-client/src/UI/CSS/EventDetails.css
+++ b/ticketing-client/src/UI/CSS/EventDetails.css
@@ -39,3 +39,10 @@
   .content-container {
     margin-top: 100px;
   }
+
+  .background-div {
+    background-image: url('https://images.unsplash.com/photo-1619204715997-1367fe5812f1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1889&q=80');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
