--- a/ticketing-client/src/UI/CSS/Navbar.css
+++ b/ticketing-client/src/UI/CSS/Navbar.css
@@ -1,8 +1,13 @@
 .navbar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 999;
-  }
-  
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 999;
+}
+
+
+.round-img {
+  border-radius: 90% 40% 70% 60%;
+  box-shadow: #d2ba6b 0px 0px 20px;
+}
