--- a/ticketing-client/src/UI/CSS/EventCarousel.css
+++ b/ticketing-client/src/UI/CSS/EventCarousel.css
@@ -52,3 +52,17 @@
 .content-container {
     margin-top: 0;
 }
+
+.gradient-custom-search-bar {
+
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgb(141, 113, 142), rgb(114, 142, 113));
+
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgb(141, 113, 142), rgb(255, 172, 99));
+
+}
+
+.bolded .dropdown-toggle {
+    color: rgb(223, 234, 234);
+}
