--- a/ticketing-client/src/UI/CSS/EventDetails.css
+++ b/ticketing-client/src/UI/CSS/EventDetails.css
@@ -99,3 +99,31 @@
   .bolded .dropdown-toggle {
     color: rgb(223, 234, 234);
   }
+
+
+  .card-gradient {
+
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgb(175, 169, 175), rgb(169, 171, 165));
+
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgb(175, 169, 175), rgb(169, 171, 165));
+
+  }
+
+  .card-bodyy-light {
+    font-weight: bold;
+    font-family: 'Courier New', Courier, monospace;
+    color: rgb(126, 243, 188)
+  }
+
+  .card-titlee-bold {
+    font-weight: bold;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: rgb(14, 3, 39)
+  }
+
+  .my-event-image {
+    object-fit: cover;
+    height: 440px;
+  }
