added nav buttons design

--- a/ticketing-client/src/UI/CSS/Navbar.css
+++ b/ticketing-client/src/UI/CSS/Navbar.css
@@ -33,3 +33,29 @@
   color: #e77171;
   /* for the elepthants */
 }
+
+.gradient-custom-button {
+
+  background: -webkit-linear-gradient(to right, rgb(89, 118, 138), rgb(130, 105, 154));
+
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(to right, rgb(89, 118, 138), rgb(130, 105, 154));
+
+  color: #110101;
+  /* for the elepthants */
+}
+
+.gradient-custom-button:hover {
+
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-linear-gradient(to right, rgb(233, 108, 101), rgb(102, 79, 124));
+
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(to right, rgb(233, 108, 101), rgb(102, 79, 124));
+
+
+}
+
+.but-text {
+  color: #ffc9c9;
+}
