--- a/ticketing-client/src/UI/CSS/EventCarousel.css
+++ b/ticketing-client/src/UI/CSS/EventCarousel.css
@@ -85,8 +85,8 @@
 
 .card-bodyy-light {
     font-weight: bold;
-    font-family: 'Courier New', Courier, monospace;
-    color: rgb(92, 108, 214);
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(217, 178, 22);
 }
 
 .card-titlee-bold {
