--- a/ticketing-client/src/UI/CSS/EventDetails.css
+++ b/ticketing-client/src/UI/CSS/EventDetails.css
@@ -29,7 +29,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    /* height: 100vh; */
   }
 
   .black-text {
@@ -41,11 +41,14 @@
   }
 
   .background-div {
-    background-image: url('https://images.unsplash.com/photo-1619204715997-1367fe5812f1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1889&q=80');
+    background: -webkit-linear-gradient(to right, rgb(89, 118, 138), rgb(130, 105, 154));
+    background: linear-gradient(to right, rgb(48, 23, 23), rgb(57, 41, 69));
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    min-height: 100vh;
   }
+
 
 
   .pagination-circle .page-link {
@@ -152,4 +155,47 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-style: italic;
     color: rgb(21, 5, 32);
+  }
+
+  .location-link {
+    margin-right: 8px;
+    /* Add some space between the links */
+  }
+
+  .my-wider-image {
+    border: 3px solid rgb(246, 113, 11);
+  }
+
+  .my-custom-padding {
+    padding-right: 1rem;
+  }
+
+  .my-custom-row {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .my-custom-row>.row {
+    display: flex;
+    flex-grow: 1;
+  }
+
+  .myy-image-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 33.33%;
+    /* Divide the height by the number of images */
+  }
+
+
+  .myy-image-container img {
+    max-height: 100%;
+    object-fit: cover;
+  }
+
+  .myy-carousel-container {
+    max-width: 20rem;
+    width: 100%;
+    height: 100%;
   }
