added possibility to choose available time for each , movie. Need to work on the date logic . Probably it is a similar fashion , and by that I mean that I need to parse a list of available dates coming from the specific event. Also need to create a new flyway sql file to update the db

--- a/ticketing-client/src/UI/CSS/EventDetails.css
+++ b/ticketing-client/src/UI/CSS/EventDetails.css
@@ -199,3 +199,21 @@
     width: 100%;
     height: 100%;
   }
+
+
+  .available-hours {
+    display: inline-block;
+    margin-left: 20px;
+    vertical-align: top;
+  }
+
+  .available-hours ul {
+    list-style-type: none;
+    padding: 0;
+  }
+
+  .hour-badge:hover {
+    background-color: #28a745;
+    border-color: #28a745;
+    color: white;
+  }
