added more ticketypes and also fixed nav problem

--- a/ticketing-client/src/UI/CSS/EventDetails.css
+++ b/ticketing-client/src/UI/CSS/EventDetails.css
@@ -217,3 +217,33 @@
     border-color: #28a745;
     color: white;
   }
+
+  .truncate-text {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  /* CSS for mobile devices */
+  @media (max-width: 767px) {
+    .btn-rounded {
+      font-size: 0.8rem;
+      padding: 8px 12px;
+    }
+  }
+
+  /* CSS for tablet devices */
+  @media (min-width: 768px) and (max-width: 991px) {
+    .btn-rounded {
+      font-size: 1rem;
+      padding: 10px 14px;
+    }
+  }
+
+  /* CSS for desktop devices */
+  @media (min-width: 992px) {
+    .btn-rounded {
+      font-size: 1.2rem;
+      padding: 12px 16px;
+    }
+  }
