--- a/ticketing-client/src/UI/CSS/UserPreference.css
+++ b/ticketing-client/src/UI/CSS/UserPreference.css
@@ -5,3 +5,19 @@
     justify-content: center;
     height: 30vh;
 }
+
+.btn-long {
+    width: 100%;
+    height: 50px;
+    margin: 10px 0;
+    border-radius: 5px;
+    border: none;
+}
+
+.select-long {
+    width: 100%;
+    height: 30px;
+    margin: 10px 0;
+    border-radius: 5px;
+    border: none;
+}
