--- a/ticketing-client/src/UI/CSS/UserPreference.css
+++ b/ticketing-client/src/UI/CSS/UserPreference.css
@@ -1,13 +1,14 @@
-.container {
+.preferences-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 30vh;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .btn-long {
-    width: 100%;
+    width: 50%;
     height: 50px;
     margin: 10px 0;
     border-radius: 5px;
@@ -15,7 +16,7 @@
 }
 
 .select-long {
-    width: 100%;
+    width: 50%;
     height: 30px;
     margin: 10px 0;
     border-radius: 5px;
