Added occupied seats

--- a/ticketing-client/src/UI/CSS/SeatPicker.css
+++ b/ticketing-client/src/UI/CSS/SeatPicker.css
@@ -46,3 +46,7 @@
 .seat.empty {
     background-color: white;
 }
+
+.custom-seat-picker .seat.occupied {
+    background-color: rgb(168, 68, 68);
+}
